Add back link to profile that was removed for some reason

--- a/src/app/design/templates/campaign-overview/campaign-overview.component.html
+++ b/src/app/design/templates/campaign-overview/campaign-overview.component.html
@@ -1,6 +1,15 @@
 <div class="container">
   <div class="campaign__heading heading">
     <div class="heading__buttons">
+      <a
+        btn
+        class="heading__button"
+        [kind]="'SECONDARY'"
+        [icon]="'circle-user'"
+        [text]="'Profile'"
+        [routerLink]="profileUrl()"
+      ></a>
+
       <button
         btn
         class="heading__button"
