--- a/src/app/design/molecules/search-field/search-field.component.scss
+++ b/src/app/design/molecules/search-field/search-field.component.scss
@@ -19,7 +19,6 @@ input[type="search"]::-webkit-search-results-decoration {
     display: flex;
     align-items: center;
     background-color: var(--bs-gray-800);
-    padding-left: var(--spacer-2);
     border-color: var(--bs-white);
     border: solid 2px var(--bs-white);
     border-radius: var(--bs-border-radius);
@@ -43,19 +42,13 @@ input[type="search"]::-webkit-search-results-decoration {
     &--disabled {
       cursor: not-allowed;
     }
-
-    .search__label {
-      transition: top 0.2s ease-in-out;
-      transition: font-size 0.2s ease-in-out;
-      position: absolute;
-      left: var(--spacer-2);
-    }
   }
 
   &__input {
     background-color: var(--bs-gray-800);
     width: 100%;
     color: var(--bs-white);
+    border-radius: var(--bs-border-radius);
 
     &--disabled {
       cursor: not-allowed;
