--- a/src/app/design/templates/search/search.component.html
+++ b/src/app/design/templates/search/search.component.html
@@ -6,6 +6,7 @@
     </div>
 
     <app-sidebar-legend
+      class="mb-4 d-block"
       [interactable]="true"
       (sidebarChange)="onCategorySelect($event)"
     ></app-sidebar-legend>
