--- a/src/app/atoms/input/input.component.html
+++ b/src/app/atoms/input/input.component.html
@@ -7,6 +7,7 @@
   class="input"
   [type]="type()"
   [value]="_value()"
+  [attr.id]="labelId()"
   [attr.aria-disabled]="disabled()"
   [attr.aria-controls]="ariaControls()"
   (keyDown)="emitValue(input.value)"
