--- a/src/app/design/templates/home/home.component.html
+++ b/src/app/design/templates/home/home.component.html
@@ -26,7 +26,7 @@
     <!-- Search Bar -->
     <app-search-field
       class="home__search-bar"
-      [placeholder]="'Search for articles in ' + campaignData()?.name"
+      [placeholder]="'Search for articles in ' + (campaignData()?.name ?? '')"
       [btnAriaLabel]="'Start search!'"
       [canSearch]="(isOnline$ | async) === true"
       (appSearch)="appSearch.emit($event)"
