Add link to campaign creation

--- a/src/app/design/templates/campaign-overview/campaign-overview.component.html
+++ b/src/app/design/templates/campaign-overview/campaign-overview.component.html
@@ -40,6 +40,18 @@
         >
         </a>
       }
+
+      @if (enableCampaignCreation()) {
+        <a
+          btn
+          class="heading__button"
+          [kind]="'SECONDARY'"
+          [icon]="'plus'"
+          [text]="'Create Campaign'"
+          [routerLink]="campaignCreateUrl"
+        >
+        </a>
+      }
     </div>
 
     @let campaignsVal = campaigns();
