--- a/src/app/design/organisms/encounter/encounter.component.html
+++ b/src/app/design/organisms/encounter/encounter.component.html
@@ -115,6 +115,7 @@
         kind: 'SELECT',
         hotkey: 'c',
         createBadgeLabel: 'Add character',
+        formFieldLabel: 'Characters',
         config: {
           options: characters(),
           valueProp: 'pk',
