--- a/src/app/design/organisms/quote/quote.component.html
+++ b/src/app/design/organisms/quote/quote.component.html
@@ -26,6 +26,7 @@
             [label]="'Characters'"
             [createOptions]="{
               kind: 'SELECT',
+              formFieldLabel: 'Characters',
               config: {
                 options: campaignCharacters(),
                 labelProp: 'name',
