--- a/src/app/design/organisms/spell/spell.component.html
+++ b/src/app/design/organisms/spell/spell.component.html
@@ -130,6 +130,7 @@
   <app-badge-list
     [createOptions]="{
       kind: 'SELECT',
+      formFieldLabel: 'Classes',
       config: {
         options: playerClassOptions(),
         labelProp: 'name',
