--- a/src/app/design/organisms/user-row/user-row.component.html
+++ b/src/app/design/organisms/user-row/user-row.component.html
@@ -17,6 +17,7 @@
       [entries]="userGroupEntries()"
       [createOptions]="{
         kind: 'SELECT',
+        formFieldLabel: 'Permission-Groups',
         config: {
           valueProp: 'id',
           labelProp: 'name',
