--- a/src/app/design/templates/organization/organization.component.html
+++ b/src/app/design/templates/organization/organization.component.html
@@ -73,6 +73,7 @@
         [entries]="organizationMembers()"
         [createOptions]="{
           kind: 'SELECT',
+          formFieldLabel: 'Characters',
           config: {
             options: campaignCharacters() ?? [],
             labelProp: 'name',
