--- a/src/app/design/templates/character/character.component.html
+++ b/src/app/design/templates/character/character.component.html
@@ -95,6 +95,7 @@
         [entries]="organizationMemberships()"
         [createOptions]="{
           kind: 'SELECT',
+          formFieldLabel: 'Organizations',
           config: {
             options: joinableOrganizations(),
             labelProp: 'name',
@@ -112,6 +113,7 @@
         [entries]="characterClasses()"
         [createOptions]="{
           kind: 'SELECT',
+          formFieldLabel: 'Classes',
           config: {
             options: campaignClasses(),
             valueProp: 'pk',
