Fix bad label reference

--- a/src/app/atoms/input/input.component.html
+++ b/src/app/atoms/input/input.component.html
@@ -1,4 +1,4 @@
-<label class="label" [for]="searchId">
+<label class="label" [attr.id]="labelId()" [for]="searchId">
   {{ label() }}
 </label>
 <input
@@ -7,7 +7,6 @@
   class="input"
   [type]="type()"
   [value]="_value()"
-  [attr.id]="labelId()"
   [attr.aria-disabled]="disabled()"
   [attr.aria-controls]="ariaControls()"
   (keyDown)="emitValue(input.value)"
