--- a/src/app/design/molecules/list/list.component.html
+++ b/src/app/design/molecules/list/list.component.html
@@ -1,7 +1,7 @@
 <section class="list">
   <!-- Heading -->
   <div class="list__heading">
-    <div class="h4" [heading]="ariaLevel()">{{ heading() }}</div>
+    <div class="fs-4 fw-bold" [heading]="ariaLevel()">{{ heading() }}</div>
     @let option = createOption();
     @switch (option.kind) {
       @case ("button") {
@@ -18,6 +18,7 @@
       @case ("link") {
         <a
           btn
+          class="ms-3"
           [attr.aria-label]="'Create ' + heading()"
           [kind]="'PRIMARY'"
           [size]="'SMALL'"
