--- a/src/app/design/organisms/quest-table/quest-table.component.html
+++ b/src/app/design/organisms/quest-table/quest-table.component.html
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row heading">
     <!-- Outer Table Heading -->
-    <h2 aria class="h5 col-sm-9 heading__text">{{ questTaker() }}'s Quests</h2>
+    <h2 aria class="fs-4 col-sm-9 fw-bold heading__text">
+      {{ questTaker() }}'s Quests
+    </h2>
 
     <!-- Filterselect -->
     <app-context-menu
-      class="col-sm-3 d-flex align-items-center justify-content-end"
+      class="col-sm-3 d-flex align-items-center justify-content-end p-0"
       [menuItems]="menuItems()"
       [menuButtonText]="state()"
       [menuButtonKind]="'DARK'"
