--- a/src/app/design/templates/marker/marker.component.html
+++ b/src/app/design/templates/marker/marker.component.html
@@ -1,9 +1,9 @@
 <app-page-container>
   <article class="container marker">
-    @if (canUpdate) {
+    @if (canUpdate()) {
       <div class="marker__edit-container">
         <a
-          [routerLink]="updateUrl"
+          [routerLink]="updateUrl()"
           btn
           [icon]="'pencil'"
           [kind]="'SECONDARY'"
@@ -15,7 +15,7 @@
 
     <div class="row marker__heading heading">
       <h1 class="col-12 heading__main">
-        Marker on {{ marker.map_details?.name }}
+        Marker on {{ marker().map_details?.name }}
       </h1>
 
       <h3 class="col-12 heading__subheading">Properties</h3>
@@ -25,21 +25,21 @@
     <div class="row">
       <div class="col-0 col-sm-4"></div>
       <strong class="col-6 col-sm-3">Longitude: </strong>
-      <span class="col-6 col-sm-5">{{ marker.longitude }}</span>
+      <span class="col-6 col-sm-5">{{ marker().longitude }}</span>
     </div>
 
     <!-- Latitude -->
     <div class="row">
       <div class="col-0 col-sm-4"></div>
       <strong class="col-6 col-sm-3">Latitude: </strong>
-      <span class="col-6 col-sm-5">{{ marker.latitude }}</span>
+      <span class="col-6 col-sm-5">{{ marker().latitude }}</span>
     </div>
 
     <!-- Marker Type -->
     <div class="row">
       <div class="col-0 col-sm-4"></div>
       <strong class="col-6 col-sm-3">Marker type: </strong>
-      <span class="col-6 col-sm-5">{{ marker.type_details?.name }}</span>
+      <span class="col-6 col-sm-5">{{ marker().type_details?.name }}</span>
     </div>
 
     <!-- Icon -->
@@ -48,12 +48,13 @@
       <strong class="col-6 col-sm-3">Icon: </strong>
 
       <span class="col-6 col-sm-5">
-        @if (marker.icon) {
-          {{ marker.icon }}
-          ( <app-icon [icon]="marker.icon"></app-icon> )
+        @let icon = marker().icon;
+        @if (icon) {
+          {{ icon }}
+          ( <app-icon [icon]="icon"></app-icon> )
         } @else {
-          {{ marker.type_details?.icon }}
-          ( <app-icon [icon]="marker.type_details?.icon!"></app-icon> )
+          {{ marker().type_details?.icon }}
+          ( <app-icon [icon]="marker().type_details?.icon!"></app-icon> )
           <span class="hint"> (from marker type) </span>
         }
       </span>
@@ -65,10 +66,10 @@
       <strong class="col-6 col-sm-3">Color: </strong>
 
       <span class="col-sm-5 col-6">
-        @if (marker.color) {
-          {{ marker.color }}
+        @if (marker().color) {
+          {{ marker().color }}
         } @else {
-          {{ marker.type_details?.color }}
+          {{ marker().type_details?.color }}
           <span class="hint"> (from marker type) </span>
         }
       </span>
@@ -76,11 +77,11 @@
 
     <!-- Footer (Move to other Article + Delete Article) -->
     <app-article-footer
-      [buttonLink]="locationUrl"
-      [buttonLabel]="'Back to ' + marker.location_details?.name"
-      [showDelete]="canDelete"
+      [buttonLink]="locationUrl()"
+      [buttonLabel]="'Back to ' + marker().location_details?.name"
+      [showDelete]="canDelete()"
       [deleteMessage]="'Marker'"
-      (delete)="markerDelete.emit(marker)"
+      (delete)="markerDelete.emit(marker())"
     ></app-article-footer>
   </article>
 </app-page-container>
